fixed mistakes